Cache; parsers; Integration tests and stream controller implementation